--- a/test/app.nw/index.html
+++ b/test/app.nw/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Repository for javascript</title>
+    <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
 <h1>javascript debug</h1>
